NetBSD Problem Report #43386

From dholland@eecs.harvard.edu  Sat May 29 19:31:00 2010
Return-Path: <dholland@eecs.harvard.edu>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 4A4C563B8CD
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 29 May 2010 19:31:00 +0000 (UTC)
Message-Id: <20100529192848.5126CFAFB@tanaqui.eecs.harvard.edu>
Date: Sat, 29 May 2010 15:28:48 -0400 (EDT)
From: dholland@eecs.harvard.edu
Reply-To: dholland@eecs.harvard.edu
To: gnats-bugs@gnats.NetBSD.org
Subject: "tput longname" broke with terminfo
X-Send-Pr-Version: 3.95

>Number:         43386
>Category:       bin
>Synopsis:       "tput longname" broke with terminfo
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat May 29 19:35:00 +0000 2010
>Closed-Date:    Tue Oct 04 11:12:48 +0000 2011
>Last-Modified:  Tue Oct 04 11:12:48 +0000 2011
>Originator:     David A. Holland
>Release:        NetBSD 5.99.29 (20100529)
>Organization:
>Environment:
System: NetBSD valkyrie 5.99.28 NetBSD 5.99.28 (VALKYRIE) #6: Sat May 1 21:46:59 EDT 2010 ocelot@valkyrie:/home/ocelot/netbsd/vfs/namei/sys/arch/amd64/compile/VALKYRIE amd64
Architecture: x86_64
Machine: amd64
>Description:

valkyrie% ./obj/tput longname

valkyrie% 

whereas in pre-terminfo 5.99.22:

tanaqui% /usr/bin/tput longname
xterm terminal emulator (X Window System)
tanaqui% 

The problem is that prlongname() in tput copies the name out of what
it thinks is a termcap entry, but it isn't one, so it gets nothing
and/or binary garble instead.

>How-To-Repeat:

as above

>Fix:

Dunno. The long names are in the terminfo source but it's not clear
from the documentation how to get them at runtime.

>Release-Note:

>Audit-Trail:
From: "Roy Marples" <roy@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43386 CVS commit: src/lib
Date: Tue, 4 Oct 2011 11:01:14 +0000

 Module Name:	src
 Committed By:	roy
 Date:		Tue Oct  4 11:01:14 UTC 2011

 Modified Files:
 	src/lib/libcurses: Makefile curses.3 curses.h curses_private.h
 	    curses_termcap.3 setterm.c
 	src/lib/libterminfo: Makefile curterm.c term.h terminfo.3
 Removed Files:
 	src/lib/libcurses: longname.c

 Log Message:
 Move longname(3) from curses to terminfo, pre-cursor to fix PR/43386.


 To generate a diff of this commit:
 cvs rdiff -u -r1.65 -r1.66 src/lib/libcurses/Makefile
 cvs rdiff -u -r1.61 -r1.62 src/lib/libcurses/curses.3
 cvs rdiff -u -r1.102 -r1.103 src/lib/libcurses/curses.h
 cvs rdiff -u -r1.46 -r1.47 src/lib/libcurses/curses_private.h
 cvs rdiff -u -r1.4 -r1.5 src/lib/libcurses/curses_termcap.3
 cvs rdiff -u -r1.16 -r0 src/lib/libcurses/longname.c
 cvs rdiff -u -r1.47 -r1.48 src/lib/libcurses/setterm.c
 cvs rdiff -u -r1.16 -r1.17 src/lib/libterminfo/Makefile
 cvs rdiff -u -r1.6 -r1.7 src/lib/libterminfo/curterm.c
 cvs rdiff -u -r1.9 -r1.10 src/lib/libterminfo/term.h
 cvs rdiff -u -r1.7 -r1.8 src/lib/libterminfo/terminfo.3

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Roy Marples" <roy@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43386 CVS commit: src/usr.bin/tput
Date: Tue, 4 Oct 2011 11:02:32 +0000

 Module Name:	src
 Committed By:	roy
 Date:		Tue Oct  4 11:02:32 UTC 2011

 Modified Files:
 	src/usr.bin/tput: tput.c

 Log Message:
 tput now uses longname(3) to derive the terminal description instead
 of trying to parse it from termpcap.
 Fixes PR/43386.


 To generate a diff of this commit:
 cvs rdiff -u -r1.20 -r1.21 src/usr.bin/tput/tput.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: roy@NetBSD.org
State-Changed-When: Tue, 04 Oct 2011 11:12:48 +0000
State-Changed-Why:
Fixed by the above commit


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.