Move longname(3) from curses to terminfo, pre-cursor to fix PR/43386.